Language module finished;

--- a/src/CVApp/Web/CVApp.Web/Views/Language/Index.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Language/Index.cshtml
@@ -35,16 +35,9 @@
 @section Scripts {
 <script>
     $(document).ready(function () {
-        let levels = ['Beginner/A1', 'Elementary/A2', 'Intermediate/B1', 'Upper Intermediate/B2', 'Advanced/C1', 'Proficient/C2'];
-      
-        for (i = 0; i < levels.length; i++) {
-            $('#levelId').append($("<option>")
-                .val(levels[i])
-                .html(levels[i])
-            );
-        }
-    });
 
+        SetLanguageLevelDropdown();
+    });
 </script>
 <partial name="_ValidationScriptsPartial" />
 }
