Some minor styleCop refactoring;

--- a/src/CVApp/Web/CVApp.Web/Views/Start/Index.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Start/Index.cshtml
@@ -13,7 +13,7 @@
 
                     @if (@Model.IsPersonalInfoFilled)
                     {
-                        <a asp-controller="PersonalInfo" asp-action="Display">Personal Info</a>
+                        <a asp-controller="PersonalInfo" asp-action="Edit">Personal Info</a>
                         <span class="badge badge-primary badge-pill"><strong>+</strong></span>
                     }
                     else
