--- a/src/CVApp/Web/CVApp.Web/Views/Education/Delete.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Education/Delete.cshtml
@@ -1,7 +1,5 @@
 ﻿@model CVApp.ViewModels.Education.EducationEditViewModel
 
-
-
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-2">
@@ -49,27 +47,27 @@
                     </div>
                     <div class="form-group" style="padding: 1px;">
                         <label asp-for="@Model.InputVM.MainSubjects">Main Subjects</label>
-                        <textarea asp-for="@Model.InputVM.MainSubjects" class="form-control myTextarea" rows="5" value="@Html.Raw(Model.InputVM.MainSubjects)" ></textarea>
+                        <textarea asp-for="@Model.InputVM.MainSubjects" class="form-control myTextarea" rows="5"></textarea>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label asp-for="@Model.InputVM.Country">Country</label>
-                            <input asp-for="@Model.InputVM.Country" class="form-control" value="@Model.InputVM.Country" />
+                            <input asp-for="@Model.InputVM.Country" class="form-control" value="@Model.InputVM.Country" readonly/>
                         </div>
                         <div class="form-group col-md-6">
                             <label asp-for="@Model.InputVM.Region">Region</label>
-                            <input asp-for="@Model.InputVM.Region" class="form-control" value="@Model.InputVM.Region" />
+                            <input asp-for="@Model.InputVM.Region" class="form-control" value="@Model.InputVM.Region" readonly/>
                         </div>
                         <div class="form-group col-md-6">
                             <label asp-for="@Model.InputVM.City">City</label>
-                            <input asp-for="@Model.InputVM.City" class="form-control" value="@Model.InputVM.City" />
+                            <input asp-for="@Model.InputVM.City" class="form-control" value="@Model.InputVM.City" readonly/>
                         </div>
                     </div>
                     <hr />
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <button type="submit" asp-route-Id="@Model.Id" class="btn btn-danger">Delete</button>
+                        <button data-message="Are you sure you want to delete this education info." onclick="TriggerModal(event)" type="submit" asp-route-Id="@Model.Id" class="btn btn-danger">Delete</button>
                     </div>
                     <div class="col-md-auto">
                         <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-info" role="button">Back</a>
@@ -91,11 +89,11 @@
 
     setTimeout(function () {
         tinymce.activeEditor.setMode('readonly');
-        }, 500);
+        }, 100);
 
     setTimeout(function () {$('#datetimepicker7').datetimepicker(
         'date', moment('@Model.InputVM.FromYear.ToString("MM/YYYY")', 'MM/YYYY')
-    ); $('#datetimepicker7').attr('readonly','readonly');}, 500);
+    ); $('#datetimepicker7').attr('readonly','readonly');}, 100);
 
     setTimeout(function () {$('#datetimepicker8').datetimepicker(
         'date', moment('@Model.InputVM.ToYear.ToString("MM/YYYY")', 'MM/YYYY')
@@ -103,7 +101,6 @@
         $('#datetimepicker8').attr('readonly','readonly');
     }, 500);
     </script>
-    <partial name="_ValidationScriptsPartial" />
 }
 
 
