--- a/src/CVApp/Web/CVApp.Web/Views/Language/Delete.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Language/Delete.cshtml
@@ -20,7 +20,7 @@
                 <hr />
                 <div class="row">
                     <div class="col-md-6">
-                        <button type="submit" asp-route-Id="@Model.Id" class="btn btn-danger">Delete</button>
+                        <button data-message="Are you sure you want to delete this language." onclick="TriggerModal(event)" type="submit" asp-route-Id="@Model.Id" class="btn btn-danger">Delete</button>
                     </div>
                     <div class="col-md-auto">
                         <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-info" role="button">Back</a>
@@ -31,12 +31,3 @@
     </div>
 </div>
 
-@section Scripts {
-    @*<script>
-    $(document).ready(function () {
-
-        SetLanguageLevelDropdown();
-    });
-    </script>*@
-    <partial name="_ValidationScriptsPartial" />
-}
